Version 0.8.4 (not yet released):
- Fix UIDLS file handling: make sure that uids appear in ascending order.
  Older versions wrote unsorted uid lists. If such a file is read, detect this
  and sort the lists.
- Print --debug output to stdout instead of stderr, since it is requested
  output. Noted by Aliaksandr Lakhanko.
- Changes taken from msmtp:
  - configure.ac: Rely on PKG_CHECK_MODULES to find GSASL, do not fall back to
    manual detection, to prevent using an incompatible version of GSASL.
    Problem reported by Jari Aalto.
  - Gnulibs sysexit_.h now defines EX_OK; there's no need to use a locally
    modified version anymore.
  - Use a locally modified version of gnulibs sysexit_.h that defines EX_OK to
    0, since the gnulib maintainers apparently won't fix this file.
    Include the sysexits.h header after all other system headers to override 
    previous definitions of EX_OK on systems that use EX_OK for other purposes.
    This is needed on Interix, reported by Ben Collver.

Version 0.8.3:
- gnulib update.
- Expect sorted UIDLS files. This means that files written by versions prior
  to 0.5.0 are not accepted anymore.
- Fixed -d and -P output for "delivery" when maildir is used.
- Changes taken from msmtp:
  - adapted configure.ac for new pkg-config version
  - Use gnulib socklen module for socklen_t.
  - W32: Enable maildir delivery.
  - W32/DJGPP: Use all files/streams in binary mode.
  - W32: Allow %HOME% to override default user configuration directory.
  - W32: Enable getpass and netrc functionality.
  - Do not rely on a failing malloc setting errno in xalloc_die()
  - Shut down a GnuTLS TLS session with GNUTLS_SHUT_WR instead of
    GNUTLS_SHUT_RDWR. This prevents session hangs in certain situations.
    It is safe to do this because we never reuse a connection when TLS was shut
    down. Thanks to Jens Kammler for the problem report!
  - Make the GnuTLS code accept old version 1 CA certificates when verifying
    certificates.